# project_def_uavdetr

./: .env.serve  AGENTS.md  ASSETS.md  CLAUDE.md  Dockerfile.serve  MODEL_CARD.md  MODULE_TODO.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
assets/: hero.html
configs/: attack_config.toml  debug.toml  default.toml  finetune_round2.toml  finetune_round3.toml  paper.toml
docker/: Dockerfile  Dockerfile.cuda  Dockerfile.mlx  docker-compose.yaml  docker-compose.yml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2.md  PRD-07-production.md  README.md
scripts/: ab_benchmark.py  adversarial_attack.py  benchmark.py  build_tensor_cache.py  eval_detection.py  export.py  export_all_formats.py  find_batch_size.py  prepare_all_datasets.py  prepare_unified_v2.py  release.py  run_infer.py  train_cu.py  train_cuda.py  train_ddp.py  train_ddp_mega.py  train_ultralytics.py
src/anima_def_uavdetr/: __init__.py  checkpoints.py  config.py  infer.py  losses.py  matcher.py  model.py  model_fast.py  postprocess.py  runtime_limits.py  serve.py  telemetry.py  version.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0103.md  PRD-0104.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0301.md  PRD-0302.md  PRD-0303.md  PRD-0304.md  PRD-0401.md  PRD-0402.md  PRD-0403.md  PRD-0404.md  PRD-0501.md  PRD-0502.md  PRD-0503.md  PRD-0504.md  PRD-0601.md  PRD-0602.md  PRD-0603.md  PRD-0604.md  PRD-0701.md  PRD-0702.md  PRD-0703.md  PRD-0704.md
tests/: test_api.py  test_backbone.py  test_checkpoint_io.py  test_config.py  test_container_config.py  test_dataset_manifest.py  test_encoder.py  test_export.py  test_infer.py  test_losses.py  test_model.py  test_neck.py  test_release_manifest.py  test_ros2_config.py  test_runtime_limits.py
(+19 files in other folders)
