[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anima-def-uavdetr"
version = "0.1.0"
description = "ANIMA DEF-UAVDETR — UAV-DETR: Anti-Drone Detection"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26,<3",
    "opencv-python>=4.10,<5",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "pywavelets>=1.6,<2",
    "pyyaml>=6.0,<7",
    "torch>=2.6,<2.8",
    "torchvision>=0.21,<0.23",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.115,<1",
    "python-multipart>=0.0.9,<1",
    "uvicorn>=0.30,<1",
]
train = [
    "onnx>=1.16,<2",
    "onnxruntime>=1.19,<2",
    "timm>=1.0,<2",
]

[dependency-groups]
dev = [
    "mypy>=1.10,<2",
    "pytest>=8.2,<9",
    "ruff>=0.6,<0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anima_def_uavdetr"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
default-groups = ["dev"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4"]
